--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,6 @@ django-forms-bootstrap==3.1.0
 django-timezone-field==3.0
 psycopg2-binary==2.7.6
 twilio==6.21.0
+
+# SECURITY WARNING: keep the secret key used in production secret!
+SECRET_KEY = 't5q9c&24jwr!dq66yv6%te%_qt)vkifylw$&q^az6-s&i-tasy'
