--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==2.2.2
 djangorestframework==3.9.4
+djangorestframework-simplejwt==4.3.0
 gunicorn==19.9.0
+PyJWT==1.7.1
 pytz==2019.1
 sqlparse==0.3.0
