--- a/requirements.txt
+++ b/requirements.txt
@@ -49,4 +49,4 @@ psycopg2-binary==2.7.6
 twilio==6.21.0
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = 't5q9c&24jwr!dq66yv6%te%_qt)vkifylw$&q^az6-s&i-tasy'
+# SECRET_KEY = 't5q9c&24jwr!dq66yv6%te%_qt)vkifylw$&q^az6-s&i-tasy'
